lib_LTLIBRARIES = libaoloopcontrolcomputecalib.la
libaoloopcontrolcomputecalib_la_SOURCES = AOloopControl_computeCalib.c AOloopControl_computeCalib.h
libaoloopcontrolcomputecalib_la_SOURCES += AOloopControl_computeCalib_Hadamard.c
libaoloopcontrolcomputecalib_la_SOURCES += AOloopControl_computeCalib_loDMmodes.c

EXTRA_DIST = doc

AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
