lib_LTLIBRARIES = libaoloopcontrolperftest.la
libaoloopcontrolperftest_la_SOURCES = AOloopControl_perfTest.c AOloopControl_perfTest.h
libaoloopcontrolperftest_la_SOURCES += AOloopControl_perfTest_DM.c
libaoloopcontrolperftest_la_SOURCES += AOloopControl_perfTest_status.c

EXTRA_DIST = doc 

AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
